--- a/makeopts.in
+++ b/makeopts.in
@@ -68,8 +68,8 @@ LINK = $(CXX) -Wl-r$(LD_RUN_PATH)
 DEF = -DM_BASEDIR="\"$(DATADIR)\"" -DM_DATADIR="\"$(DATADIR)/data\"" -DM_DOCDIR="\"$(DATADIR)/M/doc\""
 INC = -I$(BUILDDIR)/include -I$(BUILDDIR)/extra/include -I$(BUILDDIR)/include/gui -I$(CCLIENTINCLUDE) \
       $(GUI_INCLUDE) $(PYTHON_INCLUDE) $(XPM_INCLUDE) $(EXTRA_SRC_INC) @CPPFLAGS@
-CFLAGS   = @CFLAGS@ $(DBG) $(DEF) $(INC)
-CXXFLAGS = @CXXFLAGS@ $(DBG) $(DEF) $(INC)
+CFLAGS   = @CFLAGS@ @CPPFLAGS@ $(DBG) $(DEF) $(INC)
+CXXFLAGS = @CXXFLAGS@ @CPPFLAGS@ $(DBG) $(DEF) $(INC)
 LDFLAGS = @LDFLAGS@
 
 LIBS=@LIBS@ $(CCLIENTLIB)
