--- a/extra/install/Makefile
+++ b/extra/install/Makefile
@@ -1,27 +1,19 @@
 # Makefile for extra/install directory
 
 CWD = install
+SUB_DIRS = scripts
 
 include ../../makeopts
 
+# do nothing for all
 all:
 
+#
+# install the contents of all subdirs under this one
+#
 install:
-	$(INSTALL) -d $(DATADIR)/scripts
-	$(INSTALL) -d $(DATADIR)/bin
-	$(INSTALL) -d $(DATADIR)/$(CANONICAL_HOST)/bin
-	$(INSTALL) -d $(DATADIR)/$(CANONICAL_HOST)/lib
-	$(INSTALL) -d $(DATADIR)/doc/classes
-	$(INSTALL) -d $(DATADIR)/doc/python
-	ln -fs $(DATADIR)/doc $(PREFIX)/doc/M
-	$(INSTALL) `find scripts/* -not -type d` $(DATADIR)/bin
-	$(INSTALL) `find scripts/py/* -not -type d | fgrep -v config.` $(DATADIR)/scripts
-	$(INSTALL) $(BUILDDIR)/doc/classes/* $(DATADIR)/doc/classes
-	$(INSTALL) $(BUILDDIR)/doc/*.lyx $(DATADIR)/doc/
-	$(INSTALL) $(BUILDDIR)/doc/*.tex $(DATADIR)/doc/
-	$(INSTALL) $(BUILDDIR)/doc/*.ps $(DATADIR)/doc/
-	$(INSTALL) $(BUILDDIR)/src/Python/*.doc $(DATADIR)/doc/python
-	$(INSTALL) $(LOCAL_LIBS) $(DATADIR)/$(CANONICAL_HOST)/lib
+	set -e; for i in $(SUB_DIRS); do $(INSTALL) -d $(DATADIR)/$$i ; done
+	set -e; for i in $(SUB_DIRS); do  $(MAKE) -C $$i ; done
 
 include ../../makerules
 
